--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico"> <!-- the icon at the tab next to the tab title -->
     <link rel="stylesheet" href="styles/normalize.css">
@@ -12,140 +13,140 @@
 </head>
 
 <body>
-<header>
-    <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
-    <h2>San Joaquin Valley Town Hall</h2>
-    <h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
-</header>
-<nav id="nav_menu">
-    <ul>
-        <li>
-            <a href="index.html" class="current">Home</a>
-        </li>
-        <!-- Speakers -->
-        <li>
-            <a href="speakers.html">Speakers</a>
-        </li>
-        <li>
-            <a href="luncheons.html">Luncheons</a>
-        </li>
-        <li>
-            <a href="tickets.html">Tickets</a>
-        </li>
-        <!-- About Us -->
-        <li>
-            <a href="about_us.html">About Us</a>
+    <header>
+        <img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
+        <h2>San Joaquin Valley Town Hall</h2>
+        <h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
+    </header>
+    <nav id="nav_menu">
+        <ul>
+            <li>
+                <a href="index.html" class="current">Home</a>
+            </li>
+            <!-- Speakers -->
+            <li>
+                <a href="speakers.html">Speakers</a>
+            </li>
+            <li>
+                <a href="luncheons.html">Luncheons</a>
+            </li>
+            <li>
+                <a href="tickets.html">Tickets</a>
+            </li>
+            <!-- About Us -->
+            <li>
+                <a href="about_us.html">About Us</a>
+                <ul>
+                    <li>
+                        <a href="#">Our History</a>
+                    </li>
+                    <li>
+                        <a href="#">Board of Directors</a>
+                    </li>
+                    <li>
+                        <a href="#">Past Speakers</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Information</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Our Mission</h2>
+            <p>
+                San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors.
+                Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate,
+                and entertain our audience! As one or our members told us:
+            </p>
+            <blockquote>
+                &ldquo;Each year I give a ticket package to each of our family members.
+                I think of it as the gift of knowledge...and that is priceless.&rdquo;
+            </blockquote>
+            <h1> Speaker of the Month</h1>
+            <article>
+                <h2>Fossil Threads in the Web of Life</h2>
+                <img src="images/sampson_dinosaur.jpg" alt="Sampson next to dinosaur head skeleton">
+                <h3>
+                    February
+                    <br>
+                    Scott Sampson
+                </h3>
+                <p>
+                    What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.
+                </p>
+                <p>
+                    <a href="speakers/sampson.html">
+                        Read more.
+                    </a>
+                    &nbsp; <!-- None breaking space -->
+
+                    <a href="media/sampson.swf" target="_blank">
+                        <b>Or play video </b>
+                    </a>
+                </p>
+
+            </article>
+            <h2>Our Ticket Packages</h2>
             <ul>
-                <li>
-                    <a href="#">Our History</a>
-                </li>
-                <li>
-                    <a href="#">Board of Directors</a>
-                </li>
-                <li>
-                    <a href="#">Past Speakers</a>
-                </li>
-                <li>
-                    <a href="#">Contact Information</a>
-                </li>
+                <li>Season Package: $95</li>
+                <li>Patron Package: $200</li>
+                <li>Single Speaker: $25</li>
             </ul>
-        </li>
-    </ul>
-</nav>
-<main>
-    <section>
-        <h2>Our Mission</h2>
-        <p>
-            San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors.
-            Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate,
-            and entertain our audience! As one or our members told us:
-        </p>
-        <blockquote>
-            &ldquo;Each year I give a ticket package to each of our family members.
-            I think of it as the gift of knowledge...and that is priceless.&rdquo;
-        </blockquote>
-        <h1> Speaker of the Month</h1>
-        <article>
-            <h2>Fossil Threads in the Web of Life</h2>
-            <img src="images/sampson_dinosaur.jpg" alt="Sampson next to dinosaur head skeleton">
+        </section>
+
+        <aside>
+            <h2>Guest speakers</h2>
+            <!-- First Speaker-->
+            <h3>
+                October
+                <br> <!-- Line break -->
+                <a href="speakers/toobin.html"> <!-- A tag, used for linking -->
+                    Jeffrey Toobin
+                </a> <!-- End of A tag, used for linking -->
+                </br> <!-- End of Line break -->
+                <img src="images/toobin75.jpg" alt="Toobin portrait">
+            </h3>
+            <!-- Second Speaker-->
+            <h3>
+                November
+                <br> <!-- Line break -->
+                <a href="speakers/sorkin.html"> <!-- A tag, used for linking -->
+                    Andrew Ross Sorkin
+                </a> <!-- End of A tag, used    for linking -->
+                </br> <!-- End of Line break -->
+                <img src="images/sorkin75.jpg" alt="Sorkin portrait">
+            </h3>
+            <!-- Third Speaker-->
+            <h3>
+                January
+                <br>
+                <a href="speakers/chua.html">
+                    Amy Chua
+                </a>
+                </br>
+                <img src="images/chua75.jpg" alt="Chua portrait">
+            </h3>
+            <!-- Fourth Speaker-->
             <h3>
                 February
                 <br>
-                Scott Sampson
-            </h3>
-            <p>
-                What's 75 million years old and brand spanking new? A teenage Utahceratops! Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.
-            </p>
-            <p>
                 <a href="speakers/sampson.html">
-                    Read more.
+                    Scott Sampson
                 </a>
-                &nbsp; <!-- None breaking space -->
-
-                <a href="media/sampson.swf" target="_blank">
-                    <b>Or play video </b>
-                </a>
-            </p>
-
-        </article>
-        <h2>Our Ticket Packages</h2>
-        <ul>
-            <li>Season Package: $95</li>
-            <li>Patron Package: $200</li>
-            <li>Single Speaker: $25</li>
-        </ul>
-    </section>
-
-    <aside>
-        <h2>Guest speakers</h2>
-        <!-- First Speaker-->
-        <h3>
-            October
-            <br> <!-- Line break -->
-            <a href="speakers/toobin.html"> <!-- A tag, used for linking -->
-                Jeffrey Toobin
-            </a> <!-- End of A tag, used for linking -->
-            </br> <!-- End of Line break -->
-            <img src="images/toobin75.jpg" alt="Toobin portrait">
-        </h3>
-        <!-- Second Speaker-->
-        <h3>
-            November
-            <br> <!-- Line break -->
-            <a href="speakers/sorkin.html"> <!-- A tag, used for linking -->
-                Andrew Ross Sorkin
-            </a> <!-- End of A tag, used    for linking -->
-            </br> <!-- End of Line break -->
-            <img src="images/sorkin75.jpg" alt="Sorkin portrait">
-        </h3>
-        <!-- Third Speaker-->
-        <h3>
-            January
-            <br>
-            <a href="speakers/chua.html">
-                Amy Chua
-            </a>
-            </br>
-            <img src="images/chua75.jpg" alt="Chua portrait">
-        </h3>
-        <!-- Fourth Speaker-->
-        <h3>
-            February
-            <br>
-            <a href="speakers/sampson.html">
-                Scott Sampson
-            </a>
-            </br>
-            <img src="images/sampson75.jpg" alt="Sampson portrait">
-        </h3>
-    </aside>
-</main>
-<footer>
-    <p>
-        &copy; JunSean Fung, 2020
-    </p>
-</footer>
-</body>
+                </br>
+                <img src="images/sampson75.jpg" alt="Sampson portrait">
+            </h3>
+        </aside>
+    </main>
+    <footer>
+        <p>
+            &copy; JunSean Fung, 2020
+        </p>
+    </footer>
+    </body>
 </html>
 
 
