--- a/index.html
+++ b/index.html
@@ -100,45 +100,47 @@
         <aside>
             <h2>Guest speakers</h2>
             <!-- First Speaker-->
-            <h3>
-                October
-                <br> <!-- Line break -->
-                <a href="speakers/toobin.html"> <!-- A tag, used for linking -->
-                    Jeffrey Toobin
-                </a> <!-- End of A tag, used for linking -->
-                </br> <!-- End of Line break -->
-                <img src="images/toobin75.jpg" alt="Toobin portrait">
-            </h3>
-            <!-- Second Speaker-->
-            <h3>
-                November
-                <br> <!-- Line break -->
-                <a href="speakers/sorkin.html"> <!-- A tag, used for linking -->
-                    Andrew Ross Sorkin
-                </a> <!-- End of A tag, used    for linking -->
-                </br> <!-- End of Line break -->
-                <img src="images/sorkin75.jpg" alt="Sorkin portrait">
-            </h3>
-            <!-- Third Speaker-->
-            <h3>
-                January
-                <br>
-                <a href="speakers/chua.html">
-                    Amy Chua
-                </a>
-                </br>
-                <img src="images/chua75.jpg" alt="Chua portrait">
-            </h3>
-            <!-- Fourth Speaker-->
-            <h3>
-                February
-                <br>
-                <a href="speakers/sampson.html">
-                    Scott Sampson
-                </a>
-                </br>
-                <img src="images/sampson75.jpg" alt="Sampson portrait">
-            </h3>
+            <div>
+                <h3>
+                    October
+                    <br> <!-- Line break -->
+                    <a href="speakers/toobin.html"> <!-- A tag, used for linking -->
+                        Jeffrey Toobin
+                    </a> <!-- End of A tag, used for linking -->
+                    </br> <!-- End of Line break -->
+                    <img src="images/toobin75.jpg" alt="Toobin portrait">
+                </h3>
+                <!-- Second Speaker-->
+                <h3>
+                    November
+                    <br> <!-- Line break -->
+                    <a href="speakers/sorkin.html"> <!-- A tag, used for linking -->
+                        Andrew Ross Sorkin
+                    </a> <!-- End of A tag, used    for linking -->
+                    </br> <!-- End of Line break -->
+                    <img src="images/sorkin75.jpg" alt="Sorkin portrait">
+                </h3>
+                <!-- Third Speaker-->
+                <h3>
+                    January
+                    <br>
+                    <a href="speakers/chua.html">
+                        Amy Chua
+                    </a>
+                    </br>
+                    <img src="images/chua75.jpg" alt="Chua portrait">
+                </h3>
+                <!-- Fourth Speaker-->
+                <h3>
+                    February
+                    <br>
+                    <a href="speakers/sampson.html">
+                        Scott Sampson
+                    </a>
+                    </br>
+                    <img src="images/sampson75.jpg" alt="Sampson portrait">
+                </h3>
+            </div>
         </aside>
     </main>
     <footer>
