--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="shortcut icon" href="images/favicon.ico"> <!-- the icon at the tab next to the tab title -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+
+    <link rel="stylesheet" href="styles/slicknav.scss">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+
 </head>
 
 <body>
@@ -25,17 +30,17 @@
             </li>
             <!-- Speakers -->
             <li>
-                <a href="speakers.html">Speakers</a>
+                <a href="#">Speakers</a>
             </li>
             <li>
-                <a href="luncheons.html">Luncheons</a>
+                <a href="#">Luncheons</a>
             </li>
             <li>
-                <a href="tickets.html">Tickets</a>
+                <a href="#">Tickets</a>
             </li>
             <!-- About Us -->
             <li>
-                <a href="about_us.html">About Us</a>
+                <a href="#">About Us</a>
                 <ul>
                     <li>
                         <a href="#">Our History</a>
