--- a/speakers.html
+++ b/speakers.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>This page is under construction</h1>
+        <h1 ><a href="index.html" class="current">Go back to home</a></h1>
     </body>
 </html>
