--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
 
-    <link rel="stylesheet" href="styles/slicknav.scss">
+    <link rel="stylesheet" href="styles/slicknav.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-
+    <script src="styles/core.scss"></script>
+    <script src="js/jquery.slicknav.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+        });
+    </script>
 </head>
 
 <body>
@@ -23,6 +28,9 @@
         <h2>San Joaquin Valley Town Hall</h2>
         <h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
     </header>
+    <nav id="mobile_menu">
+
+    </nav>
     <nav id="nav_menu">
         <ul>
             <li>
