--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico"> <!-- the icon at the tab next to the tab title -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-
+    <!-- SlickNav -->
     <link rel="stylesheet" href="styles/slicknav.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="styles/core.scss"></script>
