--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                 <a href="#">About Us</a>
                 <ul>
                     <li>
-                        <a href="#">Our History</a>
+                        <a href="#our_history">Our History</a>
                     </li>
                     <li>
-                        <a href="#">Board of Directors</a>
+                        <a href="#board_of_directors">Board of Directors</a>
                     </li>
                     <li>
-                        <a href="#">Past Speakers</a>
+                        <a href="#past_speakers">Past Speakers</a>
                     </li>
                     <li>
-                        <a href="#">Contact Information</a>
+                        <a href="#contact_information">Contact Information</a>
                     </li>
                 </ul>
             </li>
