--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <h2>San Joaquin Valley Town Hall</h2>
         <h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
     </header>
-    <nav id="mobile_menu">
-
-    </nav>
+    <nav id="mobile_menu"></nav>
     <nav id="nav_menu">
         <ul>
             <li>
