--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -17,36 +17,35 @@
             <h2>San Joaquin Valley Town Hall</h2>
             <h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
         </header>
+        <nav id="mobile_menu"></nav>
         <nav id="nav_menu">
             <ul>
                 <li>
                     <a href="../index.html">Home</a>
                 </li>
-                <!-- Speakers -->
                 <li>
-                    <a href="../speakers.html">Speakers</a>
+                    <a href="#">Speakers</a>
                 </li>
                 <li>
-                    <a href="../luncheons.html">Luncheons</a>
+                    <a href="#">Luncheons</a>
                 </li>
                 <li>
-                    <a href="../tickets.html">Tickets</a>
+                    <a href="#">Tickets</a>
                 </li>
-                <!-- About Us -->
                 <li>
-                    <a href="../about_us.html">About Us</a>
+                    <a href="#">About Us</a>
                     <ul>
                         <li>
-                            <a href="#">Our History</a>
+                            <a href="#our_history">Our History</a>
                         </li>
                         <li>
-                            <a href="#">Board of Directors</a>
+                            <a href="#board_of_directors">Board of Directors</a>
                         </li>
                         <li>
-                            <a href="#">Past Speakers</a>
+                            <a href="#past_speakers">Past Speakers</a>
                         </li>
                         <li>
-                            <a href="#">Contact Information</a>
+                            <a href="#contact_information">Contact Information</a>
                         </li>
                     </ul>
                 </li>
