--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -9,6 +9,15 @@
         <link rel="shortcut icon" href="../images/favicon.ico"> <!-- the icon at the tab next to the tab title -->
         <link rel="stylesheet" href="../styles/normalize.css">
         <link rel="stylesheet" href="../styles/speaker.css">
+        <!-- SlickNav -->
+        <link rel="stylesheet" href="styles/slicknav.min.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="js/jquery.slicknav.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+            });
+        </script>
     </head>
 
     <body>
