--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -8,6 +8,7 @@
         <title>San Joaquin Valley Town Hall</title>
         <link rel="shortcut icon" href="../images/favicon.ico"> <!-- the icon at the tab next to the tab title -->
         <link rel="stylesheet" href="../styles/normalize.css">
+        <link rel="stylesheet" href="../styles/main.css">
         <link rel="stylesheet" href="../styles/speaker.css">
         <!-- SlickNav -->
         <link rel="stylesheet" href="styles/slicknav.min.css">
